Se Añade Funcionalidad de Retorno a pantalla de Login en Base a la Rama "Funcionalidad-Login" - El retorno al login tambien guarda el nombre de Usuario, en el caso en el que haya escrito algo. Signed-off-by: Elias Ricarte <elias.ricarte@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tp_APPSMoviles_GrupoF">
         <activity
+            android:name=".registro"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -19,7 +22,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> // mundo pa
+        </activity>
     </application>
 
 </manifest>
