Se añade una lista de Productos al login - Lista de Nombre de Producto y numero de Stock - Falta que se vean bien los productos y el stock, que seria el numero que aparece abajo del nombre

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tp_APPSMoviles_GrupoF">
         <activity
-            android:name=".registro"
+            android:name=".ListadoCompraVentaActivity"
             android:exported="false" />
+        <activity
+            android:name=".registro"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
