primer intento bdd

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".RoomApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,10 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tp_APPSMoviles_GrupoF">
         <activity
-            android:name=".registro"
+            android:name=".viewmodel.registro"
             android:exported="false" />
         <activity
-            android:name=".ListadoCompraVentaActivity"
+            android:name=".viewmodel.ListadoCompraVentaActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
